@@ -1,3 +1,12 @@
+2007-05-09  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/ia64/fpu/fraiseexcpt.c (feraiseexcept): Don't raise overflow
+	exception in addition to inexact when asked to raise only FE_INEXACT.
+
+	[BZ #3427]
+	* sysdeps/s390/fpu/feholdexcpt.c (feholdexcept): Don't clear exceptions
+	in *envp.
+
 2007-05-07  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #4403]
